[gd_scene load_steps=12 format=3 uid="uid://dhes3oyduxs6t"]

[ext_resource type="Script" path="res://Scripts/Recap.gd" id="1_fbum5"]
[ext_resource type="Texture2D" uid="uid://dg1382flwro8" path="res://Resources/Images/textrahmen.png" id="1_rvuo7"]
[ext_resource type="Texture2D" uid="uid://kxgp8oen8br6" path="res://Resources/Images/verschluckt.jpeg" id="1_ymdfc"]
[ext_resource type="Texture2D" uid="uid://etfxii4lxer1" path="res://Resources/Images/wasbeshergeschah.png" id="2_o1bj5"]
[ext_resource type="Texture2D" uid="uid://dg03tvwukdne5" path="res://Resources/Images/ship-edit.jpg" id="3_dh54v"]
[ext_resource type="Texture2D" uid="uid://ck07qf133284s" path="res://Resources/Images/papagei-edit.jpg" id="4_4g5a0"]
[ext_resource type="Texture2D" uid="uid://dpiwwxlk8j66s" path="res://Resources/Images/FreedFromHandcuffs-edit.jpg" id="5_2xrji"]
[ext_resource type="Texture2D" uid="uid://hetl1mk52t4v" path="res://Resources/Images/WhaleMap.jpg" id="6_2tosc"]
[ext_resource type="Texture2D" uid="uid://ygt2pxfllt4x" path="res://Resources/Textures/Controlls.png" id="9_fn7f7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydbb5"]
bg_color = Color(0.368627, 0.631373, 0.713726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ffcxr"]
bg_color = Color(0, 0, 0, 1)

[node name="RecapView" type="Node2D"]
script = ExtResource("1_fbum5")

[node name="Panel" type="Panel" parent="."]
offset_right = 1920.0
offset_bottom = 1076.0
scale = Vector2(1.00004, 1.01599)
theme_override_styles/panel = SubResource("StyleBoxFlat_ydbb5")

[node name="verschluckt" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="verschluckt"]
layout_mode = 2
offset_left = 1232.0
offset_top = 465.0
offset_right = 1722.0
offset_bottom = 678.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Du wurdest von 
einem gewaltigen
 Wal verschluckt"

[node name="Textrahmen" type="Sprite2D" parent="verschluckt"]
position = Vector2(1463, 551)
scale = Vector2(0.63375, 0.63375)
texture = ExtResource("1_rvuo7")

[node name="Verschluckt" type="Sprite2D" parent="verschluckt"]
position = Vector2(498, 542)
scale = Vector2(0.883789, 0.955128)
texture = ExtResource("1_ymdfc")

[node name="Button1" type="Button" parent="verschluckt"]
layout_mode = 0
offset_left = 1465.0
offset_top = 877.0
offset_right = 1844.0
offset_bottom = 992.0
theme_override_font_sizes/font_size = 50
text = "Weiter"

[node name="Schiff" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Ship-edit" type="Sprite2D" parent="Schiff"]
position = Vector2(498.25, 541.75)
scale = Vector2(0.884277, 0.955566)
texture = ExtResource("3_dh54v")

[node name="Label" type="Label" parent="Schiff"]
layout_mode = 0
offset_left = 1194.0
offset_top = 453.0
offset_right = 1772.0
offset_bottom = 723.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Auf deiner Reise durch den Bauch des Wals 
hat dich dein Weg schließlich auf das Deck 
eines verschluckten Frachtschiffs geführt.

Entschlossen gehst du unter Deck, umgeben
von Dunkelheit und dem geheimnisvollen 
Pulsieren des Walmagens."

[node name="Textrahmen" type="Sprite2D" parent="Schiff"]
position = Vector2(1463.25, 550.25)
scale = Vector2(0.63375, 0.63375)
texture = ExtResource("1_rvuo7")

[node name="Button2" type="Button" parent="Schiff"]
layout_mode = 0
offset_left = 1465.0
offset_top = 877.0
offset_right = 1844.0
offset_bottom = 992.0
theme_override_font_sizes/font_size = 50
text = "Weiter"

[node name="Papagei" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Papagei"]
layout_mode = 0
offset_left = 1089.0
offset_top = 439.0
offset_right = 1773.0
offset_bottom = 709.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Auf dem Schiff stößt du unter anderem auf einen 
ungewöhnlichen Bewohner, den König des Schiffs 
- einen Papagei. Während du das Schiff erkundest, 
entdeckst du eine kleine Krone, die du dem 
gefiederten König schenkst. Als Zeichen seiner 
Dankbarkeit entscheidet sich der Papagei, dich
auf deiner weiteren Reise durch den Wal zu begleiten."

[node name="Textrahmen" type="Sprite2D" parent="Papagei"]
position = Vector2(1432, 544.125)
scale = Vector2(0.77625, 0.803125)
texture = ExtResource("1_rvuo7")

[node name="Papagei-edit" type="Sprite2D" parent="Papagei"]
position = Vector2(498.5, 541.5)
scale = Vector2(0.883789, 0.956055)
texture = ExtResource("4_4g5a0")

[node name="Button3" type="Button" parent="Papagei"]
layout_mode = 0
offset_left = 1465.0
offset_top = 877.0
offset_right = 1844.0
offset_bottom = 992.0
theme_override_font_sizes/font_size = 50
text = "Weiter"

[node name="befreit" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="befreit"]
layout_mode = 0
offset_left = 1207.0
offset_top = 455.0
offset_right = 1750.0
offset_bottom = 746.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Zusätzlich entdeckst du einen Seemann, 
der mit Handschellen gefesselt ist und
dich inständig darum bittet, ihn zu 
befreien. Nachdem du schließlich den 
passenden Schlüssel gefunden und 
ihn von seinen Fesseln befreit hast, 
ist er dir zutiefst dankbar."

[node name="Textrahmen" type="Sprite2D" parent="befreit"]
position = Vector2(1463.25, 550.25)
scale = Vector2(0.63375, 0.63375)
texture = ExtResource("1_rvuo7")

[node name="FreedFromHandcuffs-edit" type="Sprite2D" parent="befreit"]
position = Vector2(499, 542)
scale = Vector2(0.882813, 0.957031)
texture = ExtResource("5_2xrji")

[node name="Button4" type="Button" parent="befreit"]
layout_mode = 0
offset_left = 1465.0
offset_top = 877.0
offset_right = 1844.0
offset_bottom = 992.0
theme_override_font_sizes/font_size = 50
text = "Weiter"

[node name="Karte" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Karte"]
layout_mode = 0
offset_left = 1198.0
offset_top = 454.0
offset_right = 1763.0
offset_bottom = 739.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Als Belohnung überreicht er dir eine 
Karte des Walmagens, die einen 
Geheimgang offenbart. Mit der Karte 
machst du dich auf und findest dich 
in einem Versteckten Nebengang des 
Walmagens wieder ..."

[node name="Textrahmen" type="Sprite2D" parent="Karte"]
position = Vector2(1463.25, 550.25)
scale = Vector2(0.63375, 0.63375)
texture = ExtResource("1_rvuo7")

[node name="WhaleMap" type="Sprite2D" parent="Karte"]
position = Vector2(499.75, 542.032)
scale = Vector2(0.881348, 0.957094)
texture = ExtResource("6_2tosc")

[node name="Button5" type="Button" parent="Karte"]
layout_mode = 0
offset_left = 1465.0
offset_top = 877.0
offset_right = 1844.0
offset_bottom = 992.0
theme_override_font_sizes/font_size = 50
text = "Weiter"

[node name="Wasbeshergeschah" type="Sprite2D" parent="."]
position = Vector2(1453, 114)
texture = ExtResource("2_o1bj5")

[node name="Controlls" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Controlls"]
layout_mode = 0
offset_left = -13.0
offset_top = -44.0
offset_right = 29.0
offset_bottom = 1087.0
scale = Vector2(48.0903, 1.01077)
theme_override_styles/panel = SubResource("StyleBoxFlat_ffcxr")

[node name="Sprite2D" type="Sprite2D" parent="Controlls"]
position = Vector2(964, 540)
texture = ExtResource("9_fn7f7")

[node name="Button6" type="Button" parent="Controlls"]
layout_mode = 0
offset_left = 1508.0
offset_top = 873.0
offset_right = 1820.0
offset_bottom = 990.0
theme_override_font_sizes/font_size = 50
text = "Spiel starten"

[connection signal="pressed" from="verschluckt/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Schiff/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Papagei/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="befreit/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Karte/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Controlls/Button6" to="." method="_on_button_6_pressed"]
